# DealSim-2.0

./: .env.example  DealSim_V2_Concept.md  README-ZH.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: docker-image.yml
backend/: app.out  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: graph.py  report.py  simulation.py
backend/app/services/: claim_extractor.py  graph_builder.py  mandate_persona_generator.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  sentiment_summarizer.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/utils/: excel_parser.py  file_parser.py  llm_client.py  local_zep.py  logger.py  retry.py  zep_paging.py
backend/scripts/: run_ic_room_simulation.py  run_parallel_simulation.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/components/: GraphPanel.vue  Step2EnvSetup.vue  Step3Simulation.vue  Step4Report.vue
frontend/src/views/: Home.vue  InteractionView.vue  MainView.vue  Process.vue  ReportView.vue  SimulationRunView.vue  SimulationView.vue
locales/: en.json  zh.json
